# AlgorithmEngineering

./: .gitignore  README.md
AE_PunktBeschriftung/: CMakeLists.txt  run_experiments.sh  validate_results.sh
AE_PunktBeschriftung/include/: Solver.hpp
AE_PunktBeschriftung/include/generator/: InstanceGenerator.hpp
AE_PunktBeschriftung/include/io/: InstanceReader.hpp
AE_PunktBeschriftung/include/representations/: BasicSolution.hpp  Box.hpp  Defs.hpp  Instance.hpp  PlacedRectangle.hpp  Point.hpp  Point2D.hpp  PointWithLabel.hpp  Rectangle.hpp  SimpleSolution.hpp  SimulatedAnnealingSolution.hpp  Solution.hpp  SolutionWithGraph.hpp
AE_PunktBeschriftung/include/solver/: CustomCallback.hpp  ExactSolver.hpp  FALPSolver.hpp  PopmusicSolver.hpp  PopmusicSolverExact.hpp  SimulatedAnnealing.hpp  Solver.hpp  TrivialSolver.hpp  Utils.hpp
AE_PunktBeschriftung/res/: tinyInstance.txt  tinyInstanceAndSolution.txt
AE_PunktBeschriftung/res/malformedInstances/: malformedInstance1.txt  malformedInstance2.txt  malformedInstance3.txt  malformedInstance4.txt  malformedSolution1.txt  malformedSolution2.txt  malformedSolution3.txt  malformedSolution4.txt  malformedSolution5.txt  malformedSolution6.txt
AE_PunktBeschriftung/scripts/: plot_results.py  renamer.py
AE_PunktBeschriftung/src/main/: Box.cpp  Instance.cpp  InstanceGenerator.cpp  Point2D.cpp  Solution.cpp  Solver.cpp  exact.cpp  falp.cpp  main.cpp  popmusic.cpp  popmusicexact.cpp  sa.cpp  trivial.cpp
AE_PunktBeschriftung/src/main/generator/: InstanceGenerator.cpp
AE_PunktBeschriftung/src/main/io/: InstanceReader.cpp
AE_PunktBeschriftung/src/main/representations/: BasicSolution.cpp  Box.cpp  Defs.cpp  Instance.cpp  Instance.hpp  PlacedRectangle.cpp  Point.cpp  Point2D.cpp  PointWithLabel.cpp  Rectangle.cpp  SimpleSolution.cpp  SimulatedAnnealingSolution.cpp  Solution.cpp  SolutionWithGraph.cpp
AE_PunktBeschriftung/src/main/solver/: CustomCallback.cpp  ExactSolver.cpp  FALPSolver.cpp  PopmusicSolver.cpp  PopmusicSolverExact.cpp  SimulatedAnnealing.cpp  Solver.cpp  TrivialSolver.cpp  Utils.cpp
AE_PunktBeschriftung/src/tests/: main.cpp
